# forex-choch-detector

./: README.md
forex-choch-detector/: Dockerfile  Makefile  README.md  config.yaml  demo.py  docker-compose.yml  pyproject.toml  requirements.txt
forex-choch-detector/data/: sample_eurusd.csv
forex-choch-detector/src/cli/: main.py
forex-choch-detector/src/core/: config.py  orchestrator.py
forex-choch-detector/src/data_feed/: base.py  mt5.py  oanda.py
forex-choch-detector/src/notifier/: base.py  desktop.py  email.py  telegram.py
forex-choch-detector/src/pattern/: choch_detector.py  swing_engine.py
forex-choch-detector/src/region/: box_region.py
forex-choch-detector/tests/: test_basic.py
